fix: rid horizontal scroll & clean readme

--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -14,8 +14,6 @@
     .profile__edit-button {
         width: 18px;
         height: 18px;
-        /* margin-right: 154px;
-        margin-top: 38px; */
         position: absolute;
         top: 252px;
         left: 260px;
